# automate_boring_stuff

./: README.md
amd/: lamacpp_install
system-specs-collector/: README.md  pyproject.toml  requirements.txt
system-specs-collector/system_specs_collector/: __init__.py  cli.py
system-specs-collector/tests/: test_basic.py
