[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "system-specs-collector"
version = "0.1.0"
authors = [
    { name = "Your Name", email = "your@email.com" }
]
description = "Collect detailed system hardware/software specifications"
readme = "README.md"
requires-python = ">=3.6"
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.optional-dependencies]
gpu = ["gputil"]

[project.scripts]
system-specs = "system_specs_collector:main"
